fix upload file base64
