# app/Http/Requests/Api/DeceasedProfileUpdateApiRequest.php
@@ -25,7 +25,7 @@ class DeceasedProfileUpdateApiRequest extends FormRequest
      *          @OA\Property(property="lastname", type="string", example="Gonzalez Perez", title="required|string|max:255"),
      *          @OA\Property(property="birthday", type="string", example="1975-03-21", title="required|date|date_format:Y-m-d"),
      *          @OA\Property(property="death", type="string", example="2021-03-21", title="required|date|date_format:Y-m-d|after:birthday"),
-     *          @OA\Property(property="photo", type="file", title="nullable|image"),
+     *          @OA\Property(property="photo_base64", type="string", title="nullable|base64image"),
      *      )
      * )
      */
@@ -36,7 +36,7 @@ class DeceasedProfileUpdateApiRequest extends FormRequest
             'lastname' => 'required|string|max:255',
             'birthday' => 'required|date|date_format:Y-m-d',
             'death' => 'required|date|date_format:Y-m-d|after:birthday',
-            'photo' => 'nullable|image',
+            'photo_base64' => 'nullable|base64image',
         ];
     }
 
@@ -49,7 +49,7 @@ class DeceasedProfileUpdateApiRequest extends FormRequest
      *                  @OA\Property(property="lastname", example={"El campo lastname es obligatorio."}),
      *                  @OA\Property(property="birthday", example={"El campo nacimiento es obligatorio."}),
      *                  @OA\Property(property="death", example={"El campo defunción es obligatorio."}),
-     *                  @OA\Property(property="photo", example={"El campo defunción es obligatorio."}),
+     *                  @OA\Property(property="photo_base64", example={"El campo defunción es obligatorio."}),
      *              )
      *          )
      * )
